--- a/vistas del proyecto/vista3(tutorial)/tutorial.html
+++ b/vistas del proyecto/vista3(tutorial)/tutorial.html
@@ -9,7 +9,7 @@
     <body>
         <header class="barra-superior">
             <a href="" class="volver">Volver</a>
-            <img src="imagenes/logo.png" class="logo"/>
+            <img src="../imágenes/logo.png" class="logo"/>
         </header>
 
         <main class="principal">
@@ -18,7 +18,7 @@
                     <h3>Nombre</h3>
                 </div>
 
-                <img src="imagenes/user2.jpg" class="imagen-perfil"/>
+                <img src="../imágenes/user2.jpg" class="imagen-perfil"/>
 
                 <div class="botones">
                     <a href="" class="boton">Cuenta</a>
@@ -114,6 +114,6 @@
                 </article>
             </section>
         </main>
-    <script src="indice.js"></script>
+    <script src="tutorial.js"></script>
     </body>
 </html>                                                           
